--- a/templates/faq.gohtml
+++ b/templates/faq.gohtml
@@ -1,11 +1,18 @@
-<h1>FAQs</h1> 
-<ul>
-    <li>Q: Is there a free version?</li> 
-    <li>A: Yes! We offer a free trial for 30 days on any paid plans</li>
-    &nbsp 
-    <li>Q: What are your support hours?</li> 
-    <li>A: We support staff answering emails 24/7, though response times may be a bit slower on weekends</li>
-    &nbsp
-    <li>Q: How do I contact support?</li> 
-    <li>A: Email us - <a href=/contact>Contact Page</a></li>
-</ul>
+{{ template "header" . }}
+<div class="px-6">
+    <h1 class="py-4 text-4xl semibold tracking-tight">FAQs</h1> 
+    <ul class="grid grid-cols-2 gap-16">
+        {{ range . }}
+            {{ template "qa" .}}
+        {{ end }}
+    </ul>
+</div>
+{{ template "footer" }}
+
+
+{{ define "qa" }}
+<li class="border-t border-indigo-400 py-1 px-2" >
+    <span class="block text-lg text-grey-800 semibold"> {{ .Question }} </span> 
+    <span class="block text-sm text-grey-500"> {{ .Answer }} </span> 
+</li>
+{{end}}
