--- a/templates/contact.gohtml
+++ b/templates/contact.gohtml
@@ -1,4 +1,5 @@
-<h1> Contact Page </h1>
-<p> 
-    To get in touch, email me at <a href="mailto:bozo@gmail.com">Bozo@gmail.com</a>
-</p>
+{{ template "header" .}}
+<div class="px-6">
+  <p class="py-4 text-2xl semibold tracking-tight">To get in touch, email me at <a href="mailto:bozo@gmail.com">Bozo@gmail.com</a></p>
+</div>
+{{ template "footer" .}}
