--- a/templates/tailwind.gohtml
+++ b/templates/tailwind.gohtml
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
+  <body class="min-h-screen bg-gray-100">
     <header class="bg-gradient-to-r from-blue-800 to-indigo-800">
       <nav class="px-8 py-6 flex items-center text-white">
         <div class="text-4xl pr-8">👍 Good Job</div>
@@ -25,7 +25,9 @@
         </div>
         <div>
           <a class="pr-4" href="#">Sign In</a>
-          <a class="px-4 py-2 bg-blue-700 hover:bg-blue-600 rounded" href="#"
+          <a
+            class="px-4 py-2 bg-blue-700 hover:bg-blue-600 rounded"
+            href="/signup"
             >Sign up</a
           >
         </div>
