--- a/templates/signup.gohtml
+++ b/templates/signup.gohtml
@@ -14,6 +14,7 @@
           type="email"
           placeholder="Enter an email"
           autocomplete="email"
+          autofocus
           required
         />
       </div>
