--- a/templates/tailwind.gohtml
+++ b/templates/tailwind.gohtml
@@ -10,7 +10,7 @@
     <header class="bg-gradient-to-r from-blue-800 to-indigo-800">
       <nav class="px-8 py-6 flex items-center text-white">
         <div class="text-4xl pr-8">👍 Good Job</div>
-        <div class="flex-grow pr-12 text-center">
+        <div class="flex-grow pr-12">
           <a class="text-lg font-semibold hover:text-blue-100 pr-8" href="/"
             >Home</a
           >
