--- a/templates/signin.gohtml
+++ b/templates/signin.gohtml
@@ -43,7 +43,7 @@
           Dont have an account? <a href="/signup" class="underline">Sign Up</a>
         </p>
         <p class="text-xs text-gray-500">
-          <a href="/reset-pw" class="underline">Forgot Password </a>
+          <a href="/forgot-pw" class="underline">Forgot Password </a>
         </p>
       </div>
     </form>
